--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -17,7 +17,7 @@
   --outer-space:rgb(43,49,55);
   --athens-gray:rgb(225, 228, 232);
   --athens-gray-2:#FAFBFC;
-  --athens-gray-3:#e1e4e8 ;
+  --athens-gray-3:#e1e4e8;
   --pink:#ffc0cb;
   --red:#ff0000;
   --yellow:#ffff00;
@@ -37,6 +37,7 @@
   --chambray:#364e98;
   --fiord:#424d65;
   --river-bed:#465061;
+  --river-bed-2:#444d56;
   --grape:#4a154b;
   --fern:#5fb57d;
   --malibu:#79b8ff;
@@ -63,6 +64,7 @@
   --eucalyptus:#28a745;
   --forest-green:#22863a;
   --brown:#a04100;
+
   --bs-lg: 0 8px 24px rgba(149,157,165,.2);
   --bs-xlg:0 12px 48px rgba(149,157,165,.3);
 
