--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -9,8 +9,11 @@
   nav{
     justify-content: space-between;
   }
+  .nav-mobile{
+    display: block;
+  }
   .nav-menu{
-    //display: none;
+    flex-direction: column;
     position: fixed;
     top:0;
     right: 0;
@@ -18,13 +21,16 @@
     height: 100vh;
     overflow: auto;
     background-color: var(--white);
-    //box-shadow: 0 10px 50px rgba(27,31,35,.15);
     align-items: initial;
+    box-shadow: 0 10px 50px rgba(27,31,35,.15);
     transform: translateX(50rem);
     transition: transform 0.1ms;
     z-index: 100;
     &.open{
       transform: translateX(0);
+    }
+    .btn-login,.btn-register{
+      color: var(--river-bed-2);
     }
   }
   .menu-close-icon{
@@ -70,14 +76,17 @@
     border-bottom:initial;
   }
   .nav-form{
-    margin-top: 3rem;
+    flex: initial;
     flex-direction: column;
     grid-row-gap: 2rem;
     justify-content: initial;
-    padding: 0 1.6rem;
+    align-items: flex-start;
+    margin: 3rem 1.6rem;
+    padding-right: .1rem;
+    overflow: hidden;
   }
   .search-form{
-    width: 100%;
+    width: 95%;
     border: 1px solid var(--athens-gray);
     &:focus-within {
       background-color: var(--athens-gray-2);
@@ -85,13 +94,16 @@
     input{
       color: var(--dark-blue);
       &::placeholder{
-        color: var(--dark-blue);
+        color: var(--gray-2);
       }
     }
   }
-  .nav-menu{
-    .btn-login,.btn-register{
-      color: var(--river-bed-2);
-    }
-}
+  .search-hint{
+    width:  calc(100% + 1.5rem);
+  }
+  .nav-btn-wrap{
+    width: 100%;
+    text-align: center;
+    margin: .5rem 0 1rem;
+  }
 }
