Github enterprise section mobile responsive completed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -684,8 +684,14 @@ main {
   font-size: 2rem;
 }
 
+.enterprise-items {
+  flex-basis: 60%;
+  display: flex;
+  align-items: center;
+}
+
 .enterprise-item {
-  flex-basis: 30%;
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1403,6 +1409,7 @@ main {
 /* End Footer  */
 /* Media Queries  */
 @media screen and (max-width: 1012px) {
+  /* Header */
   header {
     height: 5.2rem;
     padding: initial;
@@ -1526,11 +1533,40 @@ main {
     margin: 0.5rem 0 1rem;
   }
 
+  /* Hero */
   .hero-text {
     width: 90%;
   }
+
+  /* Github Enterprise */
+  .enterprise-content {
+    flex-direction: column;
+  }
+
+  .enterprise-title {
+    flex-basis: initial;
+    padding: initial;
+    text-align: center;
+  }
+
+  .enterprise-items {
+    flex-basis: initial;
+    margin-top: 2.5rem;
+    width: 100%;
+    text-align: center;
+    align-items: flex-end;
+  }
+
+  .enterprise-item:nth-child(2) p {
+    margin-bottom: 2rem;
+  }
 }
 @media screen and (max-width: 768px) {
+  main {
+    margin: 0;
+  }
+
+  /* Hero */
   .hero-content {
     flex-direction: column;
   }
@@ -1555,21 +1591,42 @@ main {
     justify-content: center;
   }
 
+  /* Github Enterprise */
   .enterprise-head-img {
     display: none;
   }
+
+  .enterprise-title h2 {
+    font-size: 2.6rem;
+  }
+  .enterprise-title p {
+    font-size: 1.8rem;
+  }
 }
 @media screen and (max-width: 544px) {
+  /* Header */
   .container, header .container {
     padding: 0 2rem;
   }
 
+  /* Hero */
   .hero-form {
     display: none;
   }
 
   .hero-title {
     text-align: left;
+  }
+
+  /* Github Enterprise */
+  .enterprise-items {
+    flex-direction: column;
+    align-items: center;
+    grid-row-gap: 2.5rem;
+  }
+
+  .enterprise-item:nth-child(2) p {
+    margin: 0;
   }
 }
 /* End Media Queries  */
