--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -422,8 +422,13 @@ main{
     font-size: 2rem;
   }
 }
+.enterprise-items{
+  flex-basis: 60%;
+  display: flex;
+  align-items: center;
+}
 .enterprise-item{
-  flex-basis: 30%;
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
