Organizations section mobile responsive completed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -822,6 +822,8 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  /*  grid-row-gap: 2rem;
+    grid-column-gap: 4rem;*/
 }
 
 .organization-item {
@@ -1630,6 +1632,19 @@ main {
   }
   .for-teams-content .warning {
     padding: 0;
+  }
+
+  /* Organizations */
+  .organizations-title {
+    font-size: 1.8rem;
+  }
+
+  .organization-logo {
+    max-height: 2rem;
+  }
+
+  .organization-item {
+    padding: 1rem 3rem;
   }
 }
 @media screen and (max-width: 544px) {
