--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -555,6 +555,8 @@ background-color: var(--congress-blue);
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+/*  grid-row-gap: 2rem;
+  grid-column-gap: 4rem;*/
 }
 .organization-item{
   padding: 2rem 4rem;
