--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -215,6 +215,12 @@
   .organization-item{
     padding: 1rem 3rem;
   }
+
+  /* Github Team Signup */
+  .section-title{
+    font-size: 4rem;
+  }
+  //.github-teams-signup
 }
 @media screen and (max-width: 544px) {
 
