--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -649,7 +649,7 @@ font-size: 1.6rem;
     border-bottom: 1px solid rgba(16,116,231,.5);
     transition: all .3s;
     &:hover{
-      border-bottom: 1px solid var(--science-blue);
+      border-color: var(--science-blue);
     }
   }
 }
