--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -658,6 +658,7 @@ font-size: 1.6rem;
 
 /* Leading Companies */
 .leading-companies{
+  background-color: red;
   .section-title{
   color: var(--gray-2);
     font-size: 2rem;
@@ -665,6 +666,12 @@ font-size: 1.6rem;
     text-align: center;
     margin-bottom: 1.5rem;
   }
+  img{
+    min-height: 20rem;
+  }
+}
+.cards{
+  background-color: yellow;
 }
 /* End Leading Companies */
 
