--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -249,13 +249,26 @@
   .section-title{
     font-size: 4rem;
   }
-
   .cards{
     grid-gap: 1.5rem;
   }
   .card{
     min-width: 21.5rem;
     max-width: 50%;
+  }
+
+  /*  Administration */
+  .administration-body{
+    flex-direction: column;
+  }
+  .administration-body-img{
+    order: 1;
+  }
+  .administration-items{
+    order: 2;
+  }
+  .administration-card{
+    max-width: initial;
   }
 }
 @media screen and (max-width: 544px) {
@@ -304,9 +317,13 @@
       box-shadow: initial;
     }
   }
-
   .card{
     min-width: 30rem;
     max-width: 100%;
+  }
+
+  /*  Administration */
+  .administration-item{
+    padding: 2rem 0;
   }
 }
