--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1071,7 +1071,7 @@ main {
 }
 
 .integration-body {
-  margin: 5rem auto 10rem;
+  margin: 10rem auto;
   max-width: 85rem;
 }
 
@@ -1130,7 +1130,7 @@ main {
   opacity: 0;
 }
 .integration-item:nth-child(even) {
-  margin-top: 5rem;
+  margin-top: -5rem;
 }
 
 .slack {
@@ -1613,6 +1613,11 @@ main {
   .card {
     min-width: 25rem;
   }
+
+  /* Integrations */
+  .integration-item:nth-child(even) {
+    margin: 0;
+  }
 }
 @media screen and (max-width: 900px) {
   .card {
@@ -1712,6 +1717,14 @@ main {
   .administration-card {
     max-width: initial;
   }
+
+  /* Integrations */
+  .integration-footer p {
+    max-width: 40rem;
+  }
+  .integration-footer a {
+    font-size: 1.45rem;
+  }
 }
 @media screen and (max-width: 544px) {
   /* Header */
@@ -1766,6 +1779,22 @@ main {
   /*  Administration */
   .administration-item {
     padding: 2rem 0;
+  }
+
+  /* Integrations */
+  .integration-list {
+    grid-gap: 3.5rem;
+  }
+
+  .integration-item:last-child {
+    display: none;
+  }
+
+  .integration-footer p {
+    max-width: initial;
+  }
+  .integration-footer a {
+    font-size: 1.4rem;
   }
 }
 /* End Media Queries  */
