--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -777,7 +777,7 @@ font-size: 1.6rem;
   text-align: center;
 }
 .integration-body{
-  margin: 5rem auto 10rem;
+  margin: 10rem auto;
   max-width: 85rem;
 }
 .integration-list{
@@ -834,7 +834,7 @@ font-size: 1.6rem;
     opacity: 0;
   }
   &:nth-child(even){
-    margin-top: 5rem;
+    margin-top: -5rem;
   }
 }
 .slack{
