--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -187,6 +187,25 @@
       margin: 0;
     }
   }
+
+
+  /* Community */
+  .community-footer{
+    width: calc(100% + 2rem);
+    max-width: initial;
+  }
+  .statistic.developers {
+    .statistics-number{
+      top: 10rem;
+      left: 18.5rem;
+    }
+  }
+  .statistic.businesses {
+    .statistics-number{
+      top: 22rem;
+      left: 10rem;
+    }
+  }
 }
 @media screen and (max-width: 900px) {
   .card{
@@ -287,6 +306,30 @@
       font-size: 1.45rem;
     }
   }
+
+
+  /* Community */
+  .statistics{
+    padding-left: 0;
+  }
+
+  .statistic.repositories,.statistic.developers,.statistic.businesses {
+    .statistics-number{
+     position: initial;
+      margin: 1.5rem auto;
+    }
+    .features-item{
+      max-width: initial;
+    }
+  }
+  .community-footer{
+    width: initial;
+  }
+  .statictics-date{
+    padding:0;
+    margin-top: 3rem;
+  }
+
 }
 @media screen and (max-width: 544px) {
 
