--- a/assets/scss/mediaQueries.scss
+++ b/assets/scss/mediaQueries.scss
@@ -206,6 +206,14 @@
       left: 10rem;
     }
   }
+  /* Signup Section */
+  .signup{
+    padding: 5rem 0 10rem;
+  }
+  .signup-form{
+    flex-direction: column;
+    grid-gap: 1rem;
+  }
 }
 @media screen and (max-width: 900px) {
   .card{
@@ -328,6 +336,11 @@
   .statictics-date{
     padding:0;
     margin-top: 3rem;
+  }
+
+  /* Signup Section */
+  .signup-title{
+    font-size: 2.6rem;
   }
 
 }
