Footer section responsive design completed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1644,6 +1644,11 @@ main {
     flex-direction: column;
     grid-gap: 1rem;
   }
+
+  /* Footer */
+  .footer-body {
+    flex-direction: column;
+  }
 }
 @media screen and (max-width: 900px) {
   .card {
@@ -1778,6 +1783,11 @@ main {
   .signup-title {
     font-size: 2.6rem;
   }
+
+  /* Footer */
+  .footer-col {
+    padding-right: 1rem;
+  }
 }
 @media screen and (max-width: 544px) {
   /* Header */
@@ -1848,6 +1858,25 @@ main {
   }
   .integration-footer a {
     font-size: 1.4rem;
+  }
+
+  /* Footer */
+  .footer-col {
+    flex-basis: 50%;
+    padding-right: 0;
+  }
+
+  .footer-bottom .container {
+    flex-direction: column;
+    grid-row-gap: 1.5rem;
+  }
+  .footer-bottom .another-links {
+    order: 2;
+  }
+
+  .social-media {
+    justify-content: flex-start;
+    order: 1;
   }
 }
 /* End Media Queries  */
